fix more broken tests;
Signed-off-by: Stefan Maute <stefan.maute@bosch.io>